--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
         android:contentDescription="@string/add_new_patient"
-        android:src="@drawable/ic_baseline_patient_add_24"
+        app:icon="@drawable/ic_baseline_patient_add_24"
+        android:text="Add Patient"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -36,24 +37,26 @@
         android:id="@+id/button_view_uploaded_patient_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="64dp"
         android:onClick="onViewPatientDataButtonClicked"
+        android:padding="@dimen/standard"
         android:text="@string/view_uploaded_patient_data"
         app:icon="@drawable/ic_baseline_view_list_24"
-        app:layout_constraintBottom_toTopOf="@+id/button_search_patient_data"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />
 
     <Button
         android:id="@+id/button_search_patient_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="128dp"
+        android:layout_marginTop="@dimen/large"
+        android:onClick="onSearchPatientDataButtonClicked"
+        android:padding="@dimen/standard"
         android:text="@string/search_patient_data"
         app:icon="@drawable/ic_baseline_search_24"
-        android:onClick="onSearchPatientDataButtonClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_view_uploaded_patient_data" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
